--- a/oceangroupsite/pom.xml
+++ b/oceangroupsite/pom.xml
@@ -154,6 +154,26 @@
         <version>${slf4j.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.8.0-beta2</version>
+      </dependency>
+     <!-- slf4j和log4j日志交换包-->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.8.0-beta2</version>
+      </dependency>
+      <!--log4j包-->
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.17</version>
+        <type>zip</type>
+      </dependency>
+
+
       <!-- Jackson Json处理工具包 -->
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
